--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -57,7 +57,7 @@
   
   
 
-  <meta name="author" content="Nelson Bighetti" />
+  <meta name="author" content="Aslan A. Sheozhev" />
 
   
   
@@ -794,7 +794,7 @@
         
 
   <span class="author-highlighted">
-      Nelson Bighetti</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Aslan A. Sheozhev</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Robert Ford</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
       </div>
       
